2009-10-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Use
	  ordinal comparer.

2009-10-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* Icons/XPathQueryPad.png:
	* MonoDevelop.XmlEditor.csproj:
	* MonoDevelop.XmlEditor.addin.xml: Remove icon of unknown
	  provenance.

2009-10-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Tweak
	  API so classes can return completion lists instead of
	  modifying one they're given.

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Xml.Formatting:
	* MonoDevelop.XmlEditor.csproj:
	* MonoDevelop.Xml.Formatting/XmlChar.cs:
	* MonoDevelop.Xml.Formatting/XmlFormatter.cs:
	* MonoDevelop.Xml.Formatting/XmlFormatterWriter.cs:
	* MonoDevelop.Xml.Formatting/XmlFormattingPolicy.cs: Added a
	  more advanced xml formatter, which is not yet being used.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlMultipleClosingTagCompletionData.cs:
	  Track API changes.

2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/XmlFormatter.cs: Track API changes.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	  Implemented 'Bug 537682 - It would be great if I could just
	  type bar '/' to close any tag as <foo />...'.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.csproj: Updated dependencies. We now
	  depend on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor/XmlEditorService.cs: